# LosingIndustryCropYields

./: .Rhistory  .gitignore  LICENSE  README.md  environment.yml  loi.yml  loi_agnostic.yml  loi_yield.yml  pyproject.toml
ImportedAsGeopandas/: CropGrowFraction.pkl  CropGrowHectares.pkl  FSNS.pkl  PRECL.pkl  Q.pkl  SpringBarleyYield.pkl  SpringWheatYield.pkl  TG.pkl  TS.pkl  TSMN.pkl
notebooks/: CropOpt_demo.ipynb  Import_demo.ipynb  import_demo.ipynb  yield_demo.ipynb
processed/: Continents.pkl  Descriptive_Statistics.xlsx  Raw_Column_Area.csv  Rice_LoI_data.gzip  Soybean_LoI_data.gzip  Soybean_data.gzip
reports/: Descriptive_Statistics.xlsx  Model_results.xlsx  Prediction_statistics.xlsx  Raw_Column_Area.csv
scripts/: Comparison Bar plots.ipynb  Reduction_by_continent.ipynb  Reduction_by_crop.ipynb  Reduction_by_crop_for_ToC.ipynb  Spatial Distribution Plots.ipynb  influence_of_factors.ipynb  run_all_imports.py  run_analysis.py  yield_decline_by_country.ipynb
src/: .~lock.Params.ods#  LoIMAIZYieldLowRes.csv  LoIMAIZYieldLowRes.csv.asc  LoIMAIZYieldLowRes.csv.asc.aux.xml  MAIZLoI_yieldchange_y2.asc  NOTUSEDimport_earthstat_yield_data.py  Params.ods  calculate_yields.py  create_asciis.py  example.asc  filter_low_area.py  filter_low_area_irr_and_rf.py  get_US_percent_mechanized.py  highres_yield_gap.py  highres_yield_optimized.py  import_aez.py  import_atm_data.py  import_cell_area_data.py  import_clm_data.py  import_crop_area_data.py  import_fertilizer.py  import_gap.py  import_grow_area_data.py  import_irrigation_data.py  import_irrigation_reliant.py  lowres  (+30 more)
(+116 files in other folders)
