[tool.poetry]
name = "co"
version = "0.1.0"
description = ""
authors = ["Morgan <morgan@allfed.info>"]

[tool.poetry.dependencies]
python = "^3.7"
geopandas = "^0.9.0"
pyexcel-ods = "^0.6.0"
netCDF4 = "^1.5.6"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
matplotlib = "^3.4.2"
rasterio = "^1.2.4"
scipy = "^1.6.1"
jupyterlab = "^3.0.16"
black = "^21.6b0"
Rtree = "^0.9.7"
statsmodels = "^0.12.2"
Pympler = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
